--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,25 +6,33 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Tweet Page</h1>
-    <h2>Here’s a tweet that inspires me:</h2>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul> 
+    </header>
+    <main>
+        <article>
+            <h1>Welcome to My Tweet Page</h1>
+            <h2>Here&#8217;s a tweet that inspires me:</h2>
 
-    <!-- Embedded tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-            In four months, I’m becoming a skilled, community-driven Front-End Developer who builds clean, accessible, and impactful web experiences. 
-            <a href="https://twitter.com/hashtag/ALXFE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXFE</a>
-            <a href="https://twitter.com/hashtag/ALXSE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXSE</a> 
-            <a href="https://twitter.com/hashtag/ALXPD?src=hash&amp;ref_src=twsrc%5Etfw">#ALXPD</a> 
-            <a href="https://twitter.com/alx_africa?ref_src=twsrc%5Etfw">@alx_africa</a> 
-            <a href="https://t.co/7hmLvwKudY">pic.twitter.com/7hmLvwKudY</a>
-        </p>
-        &mdash; Jay.dev (@evianojay) 
-        <a href="https://twitter.com/evianojay/status/1918980186118246884?ref_src=twsrc%5Etfw">May 4, 2025</a>
-    </blockquote> 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    <!-- Link back to homepage -->
-    <p><a href="index.html">← Back to homepage</a></p>
+            <!-- Embedded tweet -->
+            <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">
+                In four months, I&#8217;m becoming a skilled, community-driven Front-End Developer who builds clean, accessible, and impactful web experiences. 
+                <a href="https://twitter.com/hashtag/ALXFE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXFE</a>
+                <a href="https://twitter.com/hashtag/ALXSE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXSE</a> 
+                <a href="https://twitter.com/hashtag/ALXPD?src=hash&amp;ref_src=twsrc%5Etfw">#ALXPD</a> 
+                <a href="https://twitter.com/alx_africa?ref_src=twsrc%5Etfw">@alx_africa</a> 
+                <a href="https://t.co/7hmLvwKudY">pic.twitter.com/7hmLvwKudY</a>
+            </p>
+            &mdash; Jay.dev (@evianojay) 
+            <a href="https://twitter.com/evianojay/status/1918980186118246884?ref_src=twsrc%5Etfw">May 4, 2025</a>
+            </blockquote> 
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+        <footer><p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p></footer>  
+    </main>
 </body>
 </html>
