--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -33,6 +33,8 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </article>  
     </main>
-    <footer><p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p></footer>
+    <footer>
+        <p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
