--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -31,7 +31,10 @@
             <a href="https://twitter.com/evianojay/status/1918980186118246884?ref_src=twsrc%5Etfw">May 4, 2025</a>
             </blockquote> 
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </article>  
+        </article>
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>  
     </main>
     <footer>
         <p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p>
