--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -36,8 +36,6 @@
             <p>Placeholder to add comment thread later</p>
         </aside>  
     </main>
-    <footer>
-        <p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p>
-    </footer>
+    <footer><p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p></footer>
 </body>
 </html>
