--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
-        </ul> 
+        </ul>
     </header>
     <main>
         <article>
@@ -20,22 +20,22 @@
             <!-- Embedded tweet -->
             <blockquote class="twitter-tweet">
                 <p lang="en" dir="ltr">
-                    In four months, I&#8217;m becoming a skilled, community-driven Front-End Developer who builds clean, accessible, and impactful web experiences. 
+                    In four months, I&#8217;m becoming a skilled, community-driven Front-End Developer who builds clean, accessible, and impactful web experiences.
                     <a href="https://twitter.com/hashtag/ALXFE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXFE</a>
-                    <a href="https://twitter.com/hashtag/ALXSE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXSE</a> 
-                    <a href="https://twitter.com/hashtag/ALXPD?src=hash&amp;ref_src=twsrc%5Etfw">#ALXPD</a> 
-                    <a href="https://twitter.com/alx_africa?ref_src=twsrc%5Etfw">@alx_africa</a> 
+                    <a href="https://twitter.com/hashtag/ALXSE?src=hash&amp;ref_src=twsrc%5Etfw">#ALXSE</a>
+                    <a href="https://twitter.com/hashtag/ALXPD?src=hash&amp;ref_src=twsrc%5Etfw">#ALXPD</a>
+                    <a href="https://twitter.com/alx_africa?ref_src=twsrc%5Etfw">@alx_africa</a>
                     <a href="https://t.co/7hmLvwKudY">pic.twitter.com/7hmLvwKudY</a>
                 </p>
-                &mdash; Jay.dev (@evianojay) 
+                &mdash; Jay.dev (@evianojay)
                 <a href="https://twitter.com/evianojay/status/1918980186118246884?ref_src=twsrc%5Etfw">May 4, 2025</a>
-            </blockquote> 
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </article>
         <aside>
-            <p>Placeholder to add comment thread later</p>
-        </aside>  
+            <p>placeholder to add comment thread later</p>
+        </aside>
     </main>
     <footer><p>Made by Eviano James - <a href="https://bit.ly/evianojames" target="_blank">here</a></p></footer>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
